front-end for uploader done.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
-<app-photo-uploader></app-photo-uploader>
+<div fxLayout="row">
+  <div fxFlex="30"></div>
+  <div fxFlex="40">
+    <app-photo-uploader></app-photo-uploader>
+  </div>
+  <div fxFlex="30"></div>
+</div>
 <app-photo-grid></app-photo-grid>
