--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,1 +1,10 @@
-<p>photo works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title></mat-card-title>
+  </mat-card-header>
+  <img mat-card-image src="" alt="Failed to Load">
+  <mat-card-content>
+  </mat-card-content>
+  <mat-card-actions>
+  </mat-card-actions>
+</mat-card>
