photo getter done

--- a/src/app/components/photo-grid/photo-grid.component.html
+++ b/src/app/components/photo-grid/photo-grid.component.html
@@ -1,1 +1,5 @@
-<p>photo-grid works!</p>
+<div *ngIf="photoDisplayer">
+  <div *ngFor="let photo of photoDisplayer.photos;">
+    <app-photo [photo]="photo"></app-photo>
+  </div>
+</div>
