--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,8 +1,8 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <mat-card-title></mat-card-title>
+    <mat-card-title>{{photo.title}}</mat-card-title>
   </mat-card-header>
-  <img mat-card-image src="" alt="Failed to Load">
+  <img mat-card-image [src]="photo.url" alt="Failed to Load">
   <mat-card-content>
   </mat-card-content>
   <mat-card-actions>
