--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-photo-uploader></app-photo-uploader>
+<!-- <app-photo-uploader></app-photo-uploader> -->
 <app-photo-grid></app-photo-grid>
