--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,8 +1,3 @@
-<mat-card class="mat-elevation-z1 photo-card">
+<mat-card class="photo-card mat-elevation-z0" (click)="openDialog()">
   <img [src]="photo.url" alt="Failed to Load">
-  <mat-card-actions>
-    <button mat-fab class="bottom-right" (click)="like()">
-      <mat-icon>favorite_border</mat-icon>
-    </button>
-  </mat-card-actions>
 </mat-card>
