--- a/src/app/components/photo/photo.component.scss
+++ b/src/app/components/photo/photo.component.scss
@@ -1,13 +1,9 @@
 .photo-card {
   height: 300px;
+  cursor: pointer;
 }
 .photo-card > img {
   width: 100%;
   max-height: 90%;
   object-fit: contain;
-}
-.bottom-right {
-  position: absolute;
-  right: 0;
-  bottom: 0;
 }
