--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color = "primary">
-  <span>PicAll</span>
-  <span class="right-float-spacer"></span>
+  <span class="mat-display-2 no-margin-bottom">PicAll</span>
+  <app-photo-uploader></app-photo-uploader>
   <button mat-fab [matMenuTriggerFor]="menu">
     <mat-icon>face</mat-icon>
   </button>
