--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<!-- <app-photo-uploader></app-photo-uploader> -->
-<app-photo-grid></app-photo-grid>
+<div fxLayout="column" fxLayoutGap="30px">
+  <app-header></app-header>
+  <!-- <app-photo-uploader></app-photo-uploader> -->
+  <app-photo-grid></app-photo-grid>
+</div>
