--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,4 @@
-<div fxLayout="column" fxLayoutGap="30px">
+<div fxLayout="column">
   <app-header></app-header>
-  <!-- <app-photo-uploader></app-photo-uploader> -->
   <app-photo-grid></app-photo-grid>
 </div>
