--- a/src/app/components/photo-grid/photo-grid.component.html
+++ b/src/app/components/photo-grid/photo-grid.component.html
@@ -1,19 +1,25 @@
-<mat-expansion-panel [expanded] = "selectedPhotos.length > 0" color="primary">
-  <span>{{selectedPhotos.length}} Photos selected</span>
-  <button mat-fab (click) = "delete()">
-    <mat-icon>delete outline icon</mat-icon>
-  </button>
-</mat-expansion-panel>
+<div *ngIf="photoDisplayer" fxLayout="column" fxLayoutGap="20px">
 
-<div *ngIf="photoDisplayer">
   <section>
     <div fxLayout="row wrap" fxLayoutGap="4px grid">
       <div fxFlex="400px" fxFlex.xs="100%" *ngFor="let photo of photoDisplayer.photos">
         <mat-card class="mat-elevation-z1 photo-card">
+          <mat-checkbox (change)="($event.checked) ? selectPhoto(photo) : deselectPhoto(photo)"></mat-checkbox>
           <app-photo [photo]="photo"></app-photo>
-          <mat-checkbox (change)="($event.checked) ? selectPhoto(photo.id) : deselectPhoto(photo.id)"></mat-checkbox>
         </mat-card>
       </div>
     </div>
   </section>
+
+  <mat-card *ngIf="selectedPhotos.length > 0" color="primary" class="mat-elevation-z2 fixed-bottom-float">
+
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+      <span>{{selectedPhotos.length}} Photos selected</span>
+      <button mat-fab (click) = "delete()">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </div>
+
+  </mat-card>
+
 </div>
