loaders added to interceptor. changed some css

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center">
   <div fxLayout="row">
-    <mat-toolbar color = "primary" class="mat-display-1 no-margin-bottom" fxFlex="400px">
+    <mat-toolbar color = "primary" class="mat-display-1 no-margin-bottom" fxFlex="400px" fxLayout="row" fxLayoutAlign="center center">
       PicAll
     </mat-toolbar>
   </div>
