--- a/src/app/components/photo/photo-viewer/photo-viewer.component.html
+++ b/src/app/components/photo/photo-viewer/photo-viewer.component.html
@@ -1,6 +1,17 @@
-<mat-dialog-content>
-  <img [src]="photo.url" alt="Failed to Load">
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-raised-button color="primary" (click) = "download()"> Download </button>
-</mat-dialog-actions>
+<div class="photo-viewer">
+
+  <div fxLayout="row" fxLayoutAlign="end center">
+    <button mat-mini-fab mat-elevation-z0 mat-dialog-close color="primary">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
+
+  <mat-dialog-content class = "photo-frame" fxLayout="row" fxLayoutAlign="center center">
+    <img [src]="photo.url" alt="Failed to Load" class="photo-preview">
+  </mat-dialog-content>
+
+  <mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
+    <button mat-raised-button color="primary" (click) = "download()"> Download Full Size </button>
+  </mat-dialog-actions>
+
+</div>
