--- a/src/app/components/photo-grid/photo-grid.component.html
+++ b/src/app/components/photo-grid/photo-grid.component.html
@@ -1,15 +1,21 @@
-<div *ngIf="photoDisplayer" fxLayout="column" fxLayoutGap="20px">
+<div *ngIf="photoDisplayer">
+  <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
 
-  <section>
-    <div fxLayout="row wrap" fxLayoutGap="4px grid">
-      <div fxFlex="400px" fxFlex.xs="100%" *ngFor="let photo of photoDisplayer.photos">
-        <mat-card class="mat-elevation-z1 photo-card">
-          <mat-checkbox (change)="($event.checked) ? selectPhoto(photo) : deselectPhoto(photo)"></mat-checkbox>
-          <app-photo [photo]="photo"></app-photo>
-        </mat-card>
-      </div>
+    <div fxLayout="row wrap" fxLayoutGap="4px grid" fxFlexFill>
+        <div fxFlex.xl="12.5%"
+            fxFlex.lt-xl="20%"
+            fxFlex.lt-lg="25%"
+            fxFlex.lt-md="50%"
+            fxFlex.lt-sm="100%"
+            *ngFor="let photo of photoDisplayer.photos">
+          <mat-card class="mat-elevation-z1 photo-card">
+            <mat-checkbox (change)="($event.checked) ? selectPhoto(photo) : deselectPhoto(photo)"></mat-checkbox>
+            <app-photo [photo]="photo"></app-photo>
+          </mat-card>
+        </div>
     </div>
-  </section>
+
+  </div>
 
   <mat-card *ngIf="selectedPhotos.length > 0" color="primary" class="mat-elevation-z2 fixed-bottom-float">
 
@@ -21,5 +27,16 @@
     </div>
 
   </mat-card>
+
+  <div class="fixed-bottom-float fill-width">
+    <div fxLayout = "row" fxLayoutAlign="center center">
+      <mat-paginator [length]="photoDisplayer.total"
+                     [pageSize]="photoDisplayer.count"
+                     (page)="pageEvent = $event"
+                     aria-label="Select page"
+                     >
+      </mat-paginator>
+    </div>
+  </div>
 
 </div>
