--- a/src/app/components/photo-grid/photo-grid.component.scss
+++ b/src/app/components/photo-grid/photo-grid.component.scss
@@ -1,8 +1,4 @@
-.container .cardWrap div{
-  height: 300px;
-}
-.fixed-bottom-float {
-  position: fixed;
-  bottom: 8px;
+.photo-card {
+  height: 250px;
 }
 mat-checkbox ::ng-deep .mat-checkbox-inner-container {width: 30px;height: 30px;}
