--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,3 +1,3 @@
-<mat-card class="photo-card mat-elevation-z0" (click)="openDialog()">
+<mat-card class="photo mat-elevation-z0" (click)="openDialog()">
   <img [src]="photo.url" alt="Failed to Load">
 </mat-card>
