--- a/src/app/components/photo/photo.component.scss
+++ b/src/app/components/photo/photo.component.scss
@@ -1,8 +1,8 @@
-.photo-card {
-  height: 300px;
+.photo {
   cursor: pointer;
+  height: 200px;
 }
-.photo-card > img {
+.photo > img {
   width: 100%;
   max-height: 90%;
   object-fit: contain;
