--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,17 +1,18 @@
 <mat-card>
-  <form [formGroup]="form" (ngSubmit)="signUp()" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="30px">
+  <form [formGroup]="form" #formDirective="ngForm" (ngSubmit)="signUp(form, formDirective)" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="30px">
     <mat-form-field>
       <input matInput type="email" [formControlName]="'email'" placeholder="email ID">
-      <mat-error *ngIf="form.controls.email.invalid">{{emailErrorMessage()}}</mat-error>
+      <mat-error>{{emailErrorMessage()}}</mat-error>
     </mat-form-field>
     <mat-form-field>
       <input matInput type="password" [formControlName]="'password'" placeholder="Password">
-      <mat-error *ngIf="form.controls.password.invalid">{{passwordErrorMessage()}}</mat-error>
+      <mat-error>{{passwordErrorMessage()}}</mat-error>
     </mat-form-field>
     <mat-form-field>
       <input matInput type="password" [formControlName]="'rePassword'" placeholder="Re enter password">
-      <mat-error *ngIf="form.controls.password.invalid">{{rePasswordErrorMessage()}}</mat-error>
+      <mat-error> {{passwordErrorMessage()}} </mat-error>
     </mat-form-field>
-    <button mat-raised-button color="primary" [disabled] = "!form.valid">Login</button>
+    <mat-error *ngIf="form.hasError('mismatch')"> {{rePasswordErrorMessage()}} </mat-error>
+    <button mat-raised-button color="primary" [disabled] = "!form.valid">Sign up</button>
   </form>
 </mat-card>
