--- a/src/app/components/photo-grid/photo-grid.component.html
+++ b/src/app/components/photo-grid/photo-grid.component.html
@@ -1,6 +1,5 @@
 <div *ngIf="photoDisplayer">
   <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
-
     <div fxLayout="row wrap" fxLayoutGap="4px grid" fxFlexFill>
         <div fxFlex.xl="12.5%"
             fxFlex.lt-xl="20%"
@@ -9,41 +8,18 @@
             fxFlex.lt-sm="100%"
             *ngFor="let photo of photoDisplayer.photos">
           <mat-card class="mat-elevation-z1 photo-card">
-            <mat-card-header>
-              <div mat-card-avatar>
-                <mat-checkbox (change)="($event.checked) ? selectPhoto(photo) : deselectPhoto(photo)" *ngIf="userId === photo.creator"></mat-checkbox>
-              </div>
-            </mat-card-header>
-            <mat-card-content>
-              <app-photo [photo]="photo"></app-photo>
-            </mat-card-content>
+            <app-photo [photo]="photo"></app-photo>
           </mat-card>
         </div>
     </div>
-
   </div>
 
   <div class="fixed-bottom-float fill-width">
-    <div fxLayout = "row" fxLayoutAlign="center center">
-      <mat-paginator [length]="photoDisplayer.total"
-                     [pageSize]="photoDisplayer.count"
-                     (page)="pageEvent = $event"
-                     aria-label="Select page">
-      </mat-paginator>
-    </div>
+    <app-page-tracker></app-page-tracker>
   </div>
 
   <div class="fixed-bottom-float">
-    <mat-card *ngIf="selectedPhotos.length > 0" color="primary" class="mat-elevation-z2">
-
-      <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-        <span>{{selectedPhotos.length}} Photos selected</span>
-        <button mat-fab (click) = "delete()">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </div>
-
-    </mat-card>
+    <app-photo-control></app-photo-control>
   </div>
 
 </div>
