--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,3 +1,11 @@
-<mat-card class="photo mat-elevation-z0" (click)="openDialog()">
-  <img [src]="photo.url" alt="Failed to Load">
-</mat-card>
+<mat-card-header>
+  <div mat-card-avatar>
+    <mat-checkbox (change)="($event.checked) ? selectPhoto() : deselectPhoto()" *ngIf="userId === photo.creator" [checked] = "selected"></mat-checkbox>
+  </div>
+</mat-card-header>
+<mat-card-content>
+  <mat-card class="photo mat-elevation-z0" (click)="openDialog()">
+    <mat-spinner color="primary" *ngIf="loading" class="photo-loader"></mat-spinner>
+    <img [src]="photo.url" alt="Failed to Load" (load)="loaded()">
+  </mat-card>
+</mat-card-content>
