--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -6,14 +6,14 @@
   </div>
   <div fxLayout="row">
     <mat-card fxFlex="400px" color="accent">
-      <mat-tab-group animationDuration="0" #authTabGroup mat-align-tabs="center">
-        <mat-tab label="Login">
-          <app-login></app-login>
-        </mat-tab>
-        <mat-tab label="Sign up">
-          <app-signup [authTabGroup] = authTabGroup></app-signup>
-        </mat-tab>
-      </mat-tab-group>
+      <nav mat-tab-nav-bar animationDuration="0" mat-align-tabs="center">
+        <a mat-tab-link *ngFor="let link of authLinks"
+          [routerLink]="link.route"
+          (click)="activeLink = link"
+          [active]="activeLink.route == link.route"> {{link.label}}
+        </a>
+      </nav>
+      <router-outlet></router-outlet>
     </mat-card>
   </div>
 </div>
