--- a/src/app/components/notify-user/notify-user.component.html
+++ b/src/app/components/notify-user/notify-user.component.html
@@ -1,1 +1,14 @@
-<p>notify-user works!</p>
+<div *ngIf="data.success.length > 0">
+  <div>
+    <div *ngFor="let successMessage of data.success">
+      {{successMessage}}
+    </div>
+  </div>
+</div>
+<div *ngIf="data.error.length > 0">
+  <div>
+    <div *ngFor="let errorMessage of data.error">
+      {{errorMessage}}
+    </div>
+  </div>
+</div>
