--- a/src/app/modules/photos/components/photo-grid/photo-grid.component.html
+++ b/src/app/modules/photos/components/photo-grid/photo-grid.component.html
@@ -2,10 +2,10 @@
 
   <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
     <div fxLayout="row wrap" fxLayoutGap="4px grid" fxFlexFill>
-        <div fxFlex.xl="12.5%"
-            fxFlex.lt-xl="20%"
-            fxFlex.lt-lg="25%"
-            fxFlex.lt-md="50%"
+        <div fxFlex.xl="400px"
+            fxFlex.lt-xl="300px"
+            fxFlex.lt-lg="300px"
+            fxFlex.lt-md="250px"
             fxFlex.lt-sm="100%"
             *ngFor="let photo of photoDisplayer.photos">
           <mat-card class="mat-elevation-z1 photo-card">
