increased thumbnail size, styled paginator

--- a/src/app/modules/photos/components/page-tracker/page-tracker.component.html
+++ b/src/app/modules/photos/components/page-tracker/page-tracker.component.html
@@ -1,9 +1,8 @@
 <div fxLayout = "row" fxLayoutAlign="center center">
-  <mat-paginator [length]="photoDisplayer.total"
-                 [pageSize]="photoDisplayer.count"
-                 (page)="pageEvent = getPhotos($event)"
-                 aria-label="Select page"
-                 [disabled] = "disablePageNav"
-                 >
+  <mat-paginator class="photo-paginator mat-elevation-z2 mat-toolbar mat-primary" [length]="photoDisplayer.total"
+                                                          [pageSize]="photoDisplayer.count"
+                                                          (page)="pageEvent = getPhotos($event)"
+                                                          aria-label="Select page"
+                                                          [disabled] = "disablePageNav">
   </mat-paginator>
 </div>
