--- a/src/app/modules/photos/components/photo-control/photo-control.component.html
+++ b/src/app/modules/photos/components/photo-control/photo-control.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="selectedPhotos.length > 0" color="primary" class="mat-elevation-z2">
+<mat-card *ngIf="selectedPhotos.length > 0" class="mat-elevation-z2 mat-toolbar mat-color-primary">
 
   <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
     <span>{{selectedPhotos.length}} Photos selected</span>
