--- a/src/app/modules/photos/components/photo/photo.component.scss
+++ b/src/app/modules/photos/components/photo/photo.component.scss
@@ -1,10 +1,17 @@
+.thumb-check {
+  height: 30px;
+}
+.photo-thumb-frame {
+  height: calc(100% - 42px);
+}
 .photo {
+  padding: 0px;
   cursor: pointer;
-  height: 200px;
+  height: 100%;
 }
 .photo > img {
   width: 100%;
-  max-height: 90%;
+  height: 100%;
   object-fit: contain;
 }
 .photo-loader {
