--- a/src/app/modules/photos/components/photo/photo-viewer/photo-viewer.component.scss
+++ b/src/app/modules/photos/components/photo/photo-viewer/photo-viewer.component.scss
@@ -3,6 +3,8 @@
 }
 .photo-preview {
   max-height: 100%;
+  object-fit: contain;
+  max-width: 100%;
 }
 .photo-frame {
   height: calc(100% - 76px);
