--- a/src/app/modules/photos/components/photo-grid/photo-grid.component.html
+++ b/src/app/modules/photos/components/photo-grid/photo-grid.component.html
@@ -3,11 +3,9 @@
   <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
     <div fxLayout="row wrap" fxLayoutGap="4px grid" fxFlexFill>
         <div  *ngFor="let photo of photoDisplayer.photos"
-              fxFlex.xl="20%"
-              fxFlex.lt-xl="20%"
-              fxFlex.lt-lg="25%"
-              fxFlex.lt-md="50%"
-              fxFlex.lt-sm="100%">
+              fxFlex.gt-md="20%"
+              fxFlex.md="25%"
+              fxFlex.lt-md="50%">
           <mat-card class="mat-elevation-z1 photo-card">
             <app-photo [photo]="photo"></app-photo>
           </mat-card>
